# excel2md

./: CHANGELOG.md  CONTRIBUTING.md  README.md  README_ja.md  SECURITY.md  pyproject.toml
docs/: 20260126modularization_plan.md
v1.7/: excel_to_md.py  spec.md
v1.7/tests/: test_hyperlink.py
v1.8/: excel_to_md.py
v1.8/tests/: test_image_extraction.py
v2.0/: excel_to_md.py  modularization_plan.md  spec.md  spec_appendix.md
v2.0/excel2md/: cell_utils.py  cli.py  csv_export.py  image_extraction.py  mermaid_generator.py  output.py  runner.py  table_detection.py  table_extraction.py  table_formatting.py  workbook_loader.py
v2.0/tests/: test_image_extraction.py
